info window: fixed z-index of top edge gradient

--- a/src/info/info.styl
+++ b/src/info/info.styl
@@ -51,6 +51,7 @@
       right 15px
       height 20px
       background-image linear-gradient(rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%)
+      z-index 1
 
     &:after
       content ''
